@@ -6,7 +6,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-pheasant-boiled" },
@@ -20,7 +20,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-goldenpheasant-boiled" },
@@ -34,7 +34,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-capercaillie-boiled" },
@@ -48,7 +48,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-wildturkey-boiled" },
@@ -62,7 +62,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-pheasant-boiled" },
@@ -76,7 +76,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": {
@@ -93,7 +93,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-capercaillie-boiled" },
@@ -107,7 +107,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 150,
-			"meltingDuration": 100,
+			"meltingDuration": 10,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "moreanimals:egg-wildturkey-boiled" },
