@@ -100,6 +100,7 @@ REBALANCING:
 - All sauces are not drinkable; for food use only
 - Compote buffed; requires more ingredients
 - Hardtack & pemmican can be added to soup/stews
+- Egg boiling simmering recipes' meltingDuration cut from 100 seconds to 10 - DONE!!!
 - Lard simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
 - Broth simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
 - Ancient Tools' simmering recipes' meltingDuration updated to match other recipes - DONE!!!
